# kramer

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PARALLEL_EXECUTION_SUMMARY.md  PHASE3_DOCUMENTATION.md  PHASE5_SUMMARY.md  PRODUCTION_READINESS.md  README.md  TESTING.md  WEB_UI_IMPLEMENTATION_SUMMARY.md  WEB_UI_README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  start-webui.sh  test_adaptive_scheduling.py  test_budget_tracking.py  test_hypothesis_tester.py  test_parallel_execution.py
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/core/: events.py  kramer_bridge.py
backend/app/models/: __init__.py  discovery.py  responses.py  tasks.py  world_model.py
backend/app/services/: discovery_service.py  file_service.py  websocket_manager.py  world_model_service.py
backend/tests/: test_api.py
data/: sample_data.csv
docs/: RAG_FEATURE.md
examples/: __init__.py  advanced_usage.py  basic_usage.py  evaluation_example.py  full_discovery_to_report.py  literature_search.py  multi_report_generation_demo.py  rag_example.py  report_generation_demo.py  run_iris.py  world_model_usage.py
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: useDiscovery.ts  useWebSocket.ts  useWorldModel.ts
frontend/src/pages/: Configure.tsx  Dashboard.tsx  (+3 more)
kramer/: __init__.py  __main__.py  config.py  cycle_manager.py  data_agent.py  literature_agent.py  main.py  priority_queue.py  world_model.py
kramer/agents/: __init__.py  literature.py
kramer/api_clients/: semantic_scholar.py
scripts/: convert_report_to_pdf.sh
src/agents/: computational_analysis_agent.py
src/evaluation/: README.md  __init__.py  claim_extractor.py  evaluation_interface.py  integrate_with_report.py  metrics_tracker.py  multi_evaluator_consensus.py  run_evaluation.py
src/kramer/: __init__.py  cli.py  code_executor.py  data_analysis_agent.py  hypothesis_agent.py  hypothesis_tester_agent.py  notebook_manager.py  paper_processor.py  rag_engine.py  result_parser.py
src/monitoring/: __init__.py  dashboard.py  profiler.py
src/orchestrator/: agent_coordinator.py  budget_enforcer.py  checkpoint_manager.py  cycle_manager.py  hypothesis_ranker.py
src/reporting/: README.md  report_generator.py
src/utils/: __init__.py  cost_tracker.py  structured_logger.py
src/world_model/: graph.py
tests/: __init__.py  conftest.py  test_code_executor.py  test_e2e_integration.py  test_integration.py  test_literature_agent.py  test_long_running.py  test_notebook_manager.py  test_orchestrator.py  test_rag_integration.py  test_report_generator.py  test_result_parser.py  test_semantic_scholar.py  test_world_model.py
(+28 files in other folders)
