[tool.poetry]
name = "kramer"
version = "0.1.0"
description = "Multi-agent system for scientific hypothesis exploration"
authors = ["Kramer Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anthropic = "^0.39.0"
httpx = "^0.27.0"
pydantic = "^2.0.0"
tenacity = "^8.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
