[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kramer"
version = "0.1.0"
description = "A pragmatic implementation of autonomous discovery cycles with AI-powered data analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.2",
    "anthropic>=0.39.0",
    "jinja2>=3.1.0",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "jupyter>=1.0.0",
    "nbformat>=5.9.0",
    "nbconvert>=7.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[project.scripts]
kramer = "kramer.cli:main"
